tests/doWhile/invalid/Semantic/DoWhileIntCondition.wacc
# while condition type mismatch

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  do
    skip
  while 15 + 6
end
